# games_project_Agasiev

./: Makefile  main.py  pyproject.toml  setup.py
VD_games/: engine.py
VD_games/games/: calc.py  gcd.py  prime.py  progression.py
VD_games/scripts/: VD_calc.py  VD_even.py  VD_gcd.py  VD_main.py  VD_prime.py  VD_progression.py
games_project_agasiev.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
