[project]
name = "games-project-agasiev"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "prompt>=0.4.1",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "ruff>=0.15.6",
]

[project.scripts]
vd-games = "VD_games.scripts.VD_main:main"
vd-even = "VD_games.scripts.VD_even:main"
vd-calc = "VD_games.scripts.VD_calc:main"
vd-gcd = "VD_games.scripts.VD_gcd:main"

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
ignore = ["N999"]
select = ["E", "F", "W", "C", "N"]
